--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Een eerste site
+
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+    Een eerste site
+  </body>
+</html>
