--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-
+---
+titel: wilbert
+---
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>wilbert</title>
+    <meta charset="{{ page.titel }}</title>
   </head>
   <body>
     <h1>Hello World!</h1>
