--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 ---
+layout: default
 titel: wilbert
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="{{ page.titel }}</title>
-  </head>
-  <body>
+
     <h1>Hello World!</h1>
     Een eerste site
-  </body>
-</html>
+ 
